[package]
name = "rust-app"
version = "0.1.0"
edition = "2018"
authors = ["muratanaoki"]

[dependencies]
arrow = "4.3.0"
polars = "0.14.7"
polars-core = {version = "0.14.7", features=["ndarray"]}
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}
